[tool.poetry]
name = "pyblinktrade"
version = "0.9.3"
description = "Blinktrade Python API library"
authors = ["Rodrigo Souza <r@blinktrade.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
